tipos de asociacion

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Java/IntroduccionJava/target/
 /Java/IntroduccionJava2/target/
+/Java/IntroduccionJava/MascotaAPP/target/
+/Netbeans/Ejemplos/target/
